--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Lovely Movies</title>
     <!--    http://www.omdbapi.com/?s=irishman&apiKey=3ef4ab9e -->
 </head>
@@ -29,7 +29,7 @@
     </section>
 </main>
 <footer class="main-footer"></footer>
-<script src="scripts/services.js"></script>
-<script src="scripts/index.js"></script>
+<script src="services.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
